<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.emunix.nullpointer.uploader.presentation.UploadFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_upload"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="choose_file.lottie" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:visibility="gone"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:text="Main text"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/copy_to_clipboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_clipboard"
        android:drawableLeft="@drawable/ic_copy_24dp"
        android:drawableTint="@macro/m3_comp_filled_tonal_button_label_text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/share_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:drawableLeft="@drawable/ic_share_24dp"
        android:drawableTint="@macro/m3_comp_filled_tonal_button_label_text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/copy_to_clipboard_button"
        app:layout_constraintTop_toBottomOf="@id/main_text" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/try_again_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:drawableLeft="@drawable/ic_refresh_24dp"
        android:drawableTint="@macro/m3_comp_filled_tonal_button_label_text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_upload"
        android:drawableLeft="@drawable/ic_cancel_24dp"
        android:drawableTint="@macro/m3_comp_filled_tonal_button_label_text_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_file_to_upload"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_button" />

</androidx.constraintlayout.widget.ConstraintLayout>